# case_study

./: .gitignore  README.md  pyproject.toml
public/: theme.json
scripts/: app.py
src/: build_index.py
tests/: test_build_index.py  test_rag_pipeline.py
